# charEdge

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.json  .prettierrc  .stylelintrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TASK_LIST_v21.md  TASK_LIST_v22.md  TradeForge_Master_Plan.docx  ULTIMATE_TASK_LIST_v10.md  ULTIMATE_TASK_LIST_v11.md  ULTIMATE_TASK_LIST_v12.md  ULTIMATE_TASK_LIST_v13.md  ULTIMATE_TASK_LIST_v8.md  ULTIMATE_TASK_LIST_v9.md  desktop.ini  docker-compose.yml  eslint.config.js  fly.toml  index.html  knip.config.json  manifest.json  master_game_plan_v2_updated.md  middleware.ts  package-lock.json  package.json  playwright.config.js  playwright.config.ts  robots.txt  server.js  sw.js  test_output.txt  tsconfig.json  typedoc.json  (+3 more)
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
api/: KeyVault.js
broker-bridge/: README.md  bridge.py  config.example.json  requirements.txt
docs/: ARCHITECTURE.md  COMPONENT_MAP.md  CONTRIBUTING.md  CRASH_FIX_GUIDE.md  DEPLOY.md  DESIGN_OVERHAUL_SPRINTS.md  DEV_WORKFLOW.md  FILE_MANIFEST.md  INTEGRATION_GUIDE.md  LAUNCH.md  MASTER_SIMPLICITY_PLAN.md  PREDICTION_MARKETS.md  SPRINT10_REPORT.md  SPRINT5_REPORT.md  SPRINT6_REPORT.md  SPRINT7_REPORT.md  SPRINT8_REPORT.md  SPRINT9_REPORT.md  STATE_ARCHITECTURE.md  STRATEGY.md  (+11 more)
wasm/: Cargo.toml
wasm/pkg/: charedge_wasm.d.ts  charedge_wasm.js  charedge_wasm_bg.wasm  charedge_wasm_bg.wasm.d.ts  package.json
wasm/src/: atr.rs  bollinger.rs  ema.rs  lib.rs  macd.rs  patterns.rs  rsi.rs  sma.rs  transforms.rs
(+2612 files in other folders)
