[package]
name = "charedge-wasm"
version = "0.1.0"
edition = "2024"
description = "High-performance technical indicator engine for charEdge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
